tests/lang/compile_fail/spawn_bare_fn_error.expo
fn worker()
  receive
    msg -> print(msg)
  end
end

fn main
  spawn worker
end
